--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE HTML>
 <html ng-app="schoolApp">
   <head>
     <meta charset="utf-8">
     <title>Exercice 4</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
   </head>
   <body ng-controller="studentsCtrl">
     <div>
